--- a/genericBook/app/views/users/index.html.erb
+++ b/genericBook/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @users.each do |user| %>
-    <li><%= user.name %></li>
+    <li><a><%= link_to "#{user.name}", (profile_path user.id) %></a></li>
   <% end %>
 </ul>
