--- a/genericBook/app/assets/stylesheets/application.scss
+++ b/genericBook/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -21,4 +23,14 @@
 
 ul.hmenu li {
   display: inline;  
+}
+
+body {
+	padding-top: 20px;
+	padding-right: 20px;
+	padding-bottom: 50px;
+	padding-left: 20px;
+}
+content {
+	
 }
