--- a/genericBook/app/views/devise/registrations/new.html.erb
+++ b/genericBook/app/views/devise/registrations/new.html.erb
@@ -28,7 +28,7 @@
   
   <div class="field">
     <%= f.label :bio %><br />
-    <%= f.text_field :bio, autofocus: true %>
+    <%= f.text_area :bio, autofocus: true %>
   </div>
 
   <div class="actions">
