--- a/genericBook/app/views/users/profile.html.erb
+++ b/genericBook/app/views/users/profile.html.erb
@@ -1,3 +1,3 @@
 <ul>
-  <li><a><%= link_to "#{@user.name}", (profile_path @user.id) %></a></li>
+  <%= render 'users/user_item',user: @user %>
 </ul>
