--- a/genericBook/app/views/users/_user_item.html.erb
+++ b/genericBook/app/views/users/_user_item.html.erb
@@ -21,6 +21,9 @@
         <li class="active"><a>Bio: <%=user.bio %></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <% if @friends.include? user %>
+            <li class="active"><%= link_to("Add Friend",user_addFriend_path(user.id), method: "post") %></li>
+        <% end %>
         <% if current_user.role=="admin" %>
           <li class="active"><%= link_to(:Edit,user_edit_path(user.id),method: "get") %></li>
           <li class="active"><%= link_to(:Delete,user_delete_path(user.id),method: "delete") %></li>
