--- a/genericBook/app/views/layouts/application.html.erb
+++ b/genericBook/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <ul class="hmenu">
       <%= render 'devise/menu/registration_items' %>
       <%= render 'devise/menu/login_items' %>
+      <%= "You have #{@unconfirmedFriends.length} friendship petitions" %>
     </ul>
     <content>
     	<%= yield %>
