--- a/genericBook/app/views/users/_user_item.html.erb
+++ b/genericBook/app/views/users/_user_item.html.erb
@@ -21,7 +21,15 @@
         <li class="active"><a>Bio: <%=user.bio %></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <% if @friends.include? user %>
+      	<%	isFriend=false
+      		@friends.each do |f|
+      			if f.friend==user
+      				isFriend=true
+      				break
+      			end
+      		end 
+      	%>
+        <% if @friends== nil or !isFriend %>
             <li class="active"><%= link_to("Add Friend",user_addFriend_path(user.id), method: "post") %></li>
         <% end %>
         <% if current_user.role=="admin" %>
