--- a/genericBook/app/views/users/edit.html.erb
+++ b/genericBook/app/views/users/edit.html.erb
@@ -26,9 +26,25 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
+  <div class="registrationFormAlert" id="divCheckPasswordMatch">
+  </div>
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
 <% end %>
+<script>
+function checkPasswordMatch() {
+    var password = $("#user_password").val();
+    var confirmPassword = $("#user_password_confirmation").val();
+
+    if (password != confirmPassword)
+        $("#divCheckPasswordMatch").html("Passwords do not match!");
+    else
+        $("#divCheckPasswordMatch").html("Passwords match.");
+}
+
+$(document).ready(function () {
+   $("#user_password, #user_password_confirmation").keyup(checkPasswordMatch);
+});
+</script>
 
