Added a route to users/me to see the user profile

--- a/genericBook/app/views/users/me.html.erb
+++ b/genericBook/app/views/users/me.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <h1><% current_user.name %></h1>
+  <h1><%= current_user.name %></h1>
   <h2>Biography</h2>
   <div class="panel panel-default">
-	  <div class="panel-body"><% current_user.bio %></div>
+	  <div class="panel-body"><%= current_user.bio %></div>
   </div>
 </div>
