Fixed name probles with like and shared_publication. Also, now a publication can be created

--- a/genericBook/app/views/publications/_form.html.erb
+++ b/genericBook/app/views/publications/_form.html.erb
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= f.text_area :text, autofocus: true %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
