Moved genericBook/app/views/users/_publications.html.erb to genericBook/app/views/publications/_publication.html.erb

--- a/genericBook/app/views/users/_profile.html.erb
+++ b/genericBook/app/views/users/_profile.html.erb
@@ -36,7 +36,7 @@
         </thead>
         <tbody>
           <% user.shared_publications.each do |publication| %>
-            <%= render 'users/publications', publication: publication.publication %>
+            <%= render 'publications/publication', publication: publication.publication %>
           <% end %>
         </tbody>
       </table>
