--- a/genericBook/app/views/users/_profile.html.erb
+++ b/genericBook/app/views/users/_profile.html.erb
@@ -17,7 +17,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th>Friends list</th>
+            <th colspan="2">Friends list</th>
           </tr>
         </thead>
         <tbody>
