--- a/genericBook/app/views/publications/index.html.erb
+++ b/genericBook/app/views/publications/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Publications</h1>
 
 <table>
@@ -10,11 +8,9 @@
   </thead>
 
   <tbody>
-    <% @publications.each do |publication| %>
+    <% @shared_publications.each do |shared_publication| %>
       <tr>
-        <td><%= link_to 'Show', publication %></td>
-        <td><%= link_to 'Edit', edit_publication_path(publication) %></td>
-        <td><%= link_to 'Destroy', publication, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%= render 'publications/publication', publication: shared_publication.publication %>
       </tr>
     <% end %>
   </tbody>
