--- a/genericBook/app/views/publications/_publication.html.erb
+++ b/genericBook/app/views/publications/_publication.html.erb
@@ -1,8 +1,10 @@
 <table class="table">
   <thead>
     <td style="width:100%" ><%= button_to(publication.user.name,user_profile_path(publication.user.id), class: 'btn btn-primary btn-sm')%></td>
-    <td><%= button_to("Delete",user_profile_path(publication.user.id), class: 'btn btn-primary btn-sm')%></td>
-    <td><%= button_to("Edit",user_profile_path(publication.user.id), class: 'btn btn-primary btn-sm')%></td>
+    <% if current_user.role="admin" or @publication.user==current_user %>
+		<td><%= button_to("Delete",publication_path(publication),method: :delete, class: 'btn btn-primary btn-sm')%></td>
+		<td><%= button_to("Edit",edit_publication_path(publication),method: :get, class: 'btn btn-primary btn-sm')%></td>
+	<% end %>
     <td><%= button_to("Likes: #{publication.likes.length}",user_profile_path(publication.user.id), class: 'btn btn-success btn-sm')%></td>
   </thead>
   <tbody>
