--- a/genericBook/app/views/publications/show.html.erb
+++ b/genericBook/app/views/publications/show.html.erb
@@ -1,4 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<%= link_to 'Edit', edit_publication_path(@publication) %> |
-<%= link_to 'Back', publications_path %>
+<%= render 'publications/publication', publication: @publication %>>
