Now is posible to add an image when creating a post

--- a/genericBook/app/views/publications/show.html.erb
+++ b/genericBook/app/views/publications/show.html.erb
@@ -1,1 +1,1 @@
-<%= render 'publications/publication', publication: @publication %>>
+<%= render 'publications/publication', publication: @publication %>
