--- a/genericBook/app/views/publications/_form.html.erb
+++ b/genericBook/app/views/publications/_form.html.erb
@@ -14,6 +14,10 @@
   <div class="field">
     <%= f.text_area :text, autofocus: true %>
   </div>
+   <div class="field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image,accept: 'image/png,image/gif,image/jpeg' %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
