Now the images are stored correctly. Also, now the posts display and image

--- a/genericBook/app/views/publications/_publication.html.erb
+++ b/genericBook/app/views/publications/_publication.html.erb
@@ -18,7 +18,12 @@
   </thead>
   <tbody>
     <tr>
-      <td colspan="4"><%=publication.text%></td>
+      <td colspan=4>
+          <% if publication.image%>
+		  	<img src="<%= "/"+publication.image %>" style="width:304px;height:228px;">
+		  <% end %>
+		  <br><%=publication.text%></td>
+      
     </tr>
   </tbody>
 </table>
