A publication image can now be edited

--- a/genericBook/app/views/publications/_publication.html.erb
+++ b/genericBook/app/views/publications/_publication.html.erb
@@ -20,7 +20,7 @@
     <tr>
       <td colspan=4>
           <% if publication.image%>
-		  	<img src="<%= "/"+publication.image %>" style="width:304px;height:228px;">
+		  	<img src="<%= "/"+publication.image %>">
 		  <% end %>
 		  <br><%=publication.text%></td>
       
