--- a/genericBook/app/views/publications/edit.html.erb
+++ b/genericBook/app/views/publications/edit.html.erb
@@ -1,6 +1,31 @@
 <h1>Editing Publication</h1>
 
-<%= render 'form', publication: @publication %>
+<%= form_for(@publication) do |f| %>
+  <% if @publication.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@publication.errors.count, "error") %> prohibited this publication from being saved:</h2>
+
+      <ul>
+      <% @publication.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="field">
+    <%= f.text_area :text, autofocus: true %>
+  </div>
+   <div class="field">
+    <%= f.label :image %><br>
+    <%= check_box "asd","asd" %>
+    <%= f.file_field :image,accept: 'image/png,image/gif,image/jpeg' %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
 
 <%= link_to 'Show', @publication %> |
 <%= link_to 'Back', publications_path %>
