--- a/genericBook/app/views/users/petitions.html.erb
+++ b/genericBook/app/views/users/petitions.html.erb
@@ -1,4 +1,4 @@
 <% @unconfirmedFriends.each do |petition| %>
 	<% petUser=petition.friend %>
-	<div><%=link_to petUser.name, user_profile_path(petUser.id)%> <%=link_to "Deny", friendships_deny_path(petition.id),method: :delete%> <%=link_to "Accept", friendships_accept_path(petition.id),method: :patch%></div>
+	<div><%=link_to petUser.name, user_profile_path(petUser.id)%>     <%=link_to "Deny", friendships_deny_path(petition.id),method: :delete, class: 'btn btn-danger btn-sm'%>  <%=link_to "Accept", friendships_accept_path(petition.id),method: :patch,class: 'btn btn-success btn-sm'%></div>
 <% end %>
